--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="result_container">
-        <div class="result">Test</div>
+        <div class="result">Round Result</div>
     </div>
 
     <div class="option_container">
