--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <div class="result_container">
         <div class="result">Round Result</div>
+        <div class="score">Player Score : 0 , Computer Score : 0</div>
     </div>
 
     <div class="option_container">
